# sdxl-newdream-20-inference

./: .gitmodules  README.md  pyproject.toml  requirements.txt
models/models--stablediffusionapi--newdream-sdxl-20/refs/: main
src/: main.py  pipeline.py
