[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-maxxing-4090-newdream"
description = "An edge-maxxing model submission for the 4090 newdream contest"
requires-python = ">=3.10,<3.13"
version = "7"
dependencies = [
    "diffusers==0.31.0",
    "transformers==4.46.2",
    "accelerate==1.1.0",
    "omegaconf==2.3.0",
    "torch==2.5.1",
    "edge-maxxing-pipelines @ git+https://github.com/womboai/edge-maxxing@e713a4f52ca3ea8c1d57ff63c1c08470f4fd0a60#subdirectory=pipelines",
]

[tool.edge-maxxing]
models = [
    "stablediffusionapi/newdream-sdxl-20"
]

[project.scripts]
start_inference = "main:main"
